<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/gifTextView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/bell" />

    <TextView
        android:id="@+id/medNameAlrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gifTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Peracitamol"
        android:textColor="#FA3C2F"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgAlrt"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/bot"
        android:layout_below="@+id/textView15"
        android:layout_toLeftOf="@+id/gifTextView"
        android:layout_toStartOf="@+id/gifTextView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/med_type"
        android:textColor="#FA3C2F"
        android:textSize="18sp"
        android:layout_below="@+id/medNameAlrt"
        android:layout_toRightOf="@+id/imgAlrt"
        android:layout_toEndOf="@+id/imgAlrt"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp" />

    <TextView
        android:id="@+id/medTypeAlrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:layout_below="@+id/textView15"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="6dp"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/medTypeAlrt"
        android:layout_alignStart="@+id/medTypeAlrt"
        android:layout_below="@+id/medTypeAlrt"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/schedule"
        android:textColor="#FA3C2F"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/scheduleAlrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/textView18"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="6dp"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialogAlrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scheduleAlrt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="33dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/dialog"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/dialogAlrt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/buttonshape"
        android:text="@string/alarm_off"
        android:textAllCaps="false"
        android:textColor="#FFFBFBFB"
        android:textSize="16sp" />

</RelativeLayout>